# rust_brainflow

./: README.md
brainflow/: Cargo.toml
brainflow/src/: data_filter.rs
brainflow/src/ffi/: constants.rs
eegui/: Cargo.toml
eegui/demo1/: app.rs  main.rs
eegui/demo2/: app.rs  main.rs
eegui/demo3/: app.rs  main.rs
eegui/demo4/: app.rs  eplot.rs  main.rs
eegui/demo5/: app.rs  chaninfo.rs  eplot.rs  main.rs
eegui/src/: app.rs  eplot.rs  main.rs
