cargo-features = ["edition2021"]

[package]
name = "brainflow"
version = "0.0.1"
authors = ["Andrey Parfenov <andrey@brainflow.org>", "Daniel Hahne <brainflow@niel.re>"]
edition = "2018"
description = "BrainFlow is a library intended to obtain, parse and analyze EEG, EMG, ECG, and other kinds of data from biosensors."
repository = "https://github.com/brainflow-dev/brainflow"
license = "MIT"
readme = "README.md"
documentation = "https://brainflow.readthedocs.io"

[features]
generate_binding = ["bindgen"]

[dependencies]
getset      = "0.1.2" #"0.1.1"
ndarray     = "0.16.1" # "0.15.6/0.15.3"
num         = "0.4.1" # "0.4.0"
num-complex = "0.4.5" # "0.4.0"
num-derive  = "0.4.2" # "0.3.3"
num-traits  = "0.2.18" # "0.2.14"
paste       = "1.0.14" #"1.0.5"
serde       = { version = "1.0.197", features = ["derive"] } # 1.0.130
serde_json  = "1.0.114" # "1.0.68"
thiserror   = "1.0.58" # "1.0.29"

[dev-dependencies]
approx = "0.5.1" # "0.5.0"
regex  = "1.10.3" # "1.6.0"

[build-dependencies]
bindgen      = { version = "0.69.4", optional = true } # 0.59.1
convert_case = "0.6.0" # 0.6.0
fs_extra     = "1.3.0" # 1.2.0
regex        = "1.10.3" # 1.5.4
