[package]
name = "eegui"
version = "0.1.0"
authors = ["GUOHUA LI"]
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "demo1"
path = "demo1/main.rs"

[[bin]]
name = "demo2"
path = "demo2/main.rs"

[[bin]]
name = "demo3"
path = "demo3/main.rs"

[[bin]]
name = "demo4"
path = "demo4/main.rs"

[[bin]]
name = "demo5"
path = "demo5/main.rs"

[dependencies]
egui      = "0.30.0"
egui_plot = "0.30.0"
eframe    = "0.30.0"
emath     = "0.30.0"
ndarray   = "0.16.1"
brainflow = { path = "../brainflow" }

